added instructions to each page

--- a/game_pages/roguelike/A.html
+++ b/game_pages/roguelike/A.html
@@ -69,9 +69,12 @@
             <div id="game-container">
                 <canvas id="unity-canvas" width=576 height=480 style="width: 576px; height: 480px; background: #231F20"></canvas>
             </div>
+            <div id="game-instructions">
+                [WASD] Move
+            </div>
 
             <div id="footer">
-                <div class="foot-item" onclick="gotoLink('https://forms.gle/G9vE4AJTqWKUzMwj8',true)">FORM</div>
+                <!-- <div class="foot-item" onclick="gotoLink('https://forms.gle/G9vE4AJTqWKUzMwj8',true)">FORM</div> -->
                 <div class="foot-item" onclick="gotoLink('../../index.html')">HOME</div>
             </div>
         </div>
