--- a/game_pages/platformer/C.html
+++ b/game_pages/platformer/C.html
@@ -68,6 +68,9 @@
             <div id="game-container">
                 <canvas id="unity-canvas" width=576 height=480 style="width: 576px; height: 480px; background: #231F20"></canvas>
             </div>
+            <div id="game-instructions">
+                [A] - Move Left | [W] - Jump | [D] - Move Right
+            </div>
 
             <div id="footer">
                 <div class="foot-item" onclick="gotoLink('https://forms.gle/G9vE4AJTqWKUzMwj8',true)">FORM</div>
