update to use base games

--- a/game_pages/platformer/A.html
+++ b/game_pages/platformer/A.html
@@ -3,8 +3,7 @@
     <head>
         <script>
             GAME_GENRE = "platformer";
-            // GAME_NAME = "platformer_chatgpt";
-            GAME_NAME = "platformer_base";
+            GAME_NAME = "platformer_chatgpt";
             GAME_LETTER = "A";
 
             // add the loader script
