--- a/game_pages/platformer/C.html
+++ b/game_pages/platformer/C.html
@@ -3,7 +3,7 @@
     <head>
         <script>
             GAME_GENRE = "platformer";
-            GAME_NAME = "platformer_claude";
+            GAME_NAME = "platformer_base";
             GAME_LETTER = "C";
 
             // add the loader script
