--- a/game_pages/roguelike/A.html
+++ b/game_pages/roguelike/A.html
@@ -3,8 +3,7 @@
     <head>
         <script>
             GAME_GENRE = "roguelike";
-            // GAME_NAME = "roguelike_human";
-            GAME_NAME = "roguelike_base";
+            GAME_NAME = "roguelike_human";
             GAME_LETTER = "A";
 
             // add the loader script
