--- a/game_pages/roguelike/B.html
+++ b/game_pages/roguelike/B.html
@@ -3,7 +3,7 @@
     <head>
         <script>
             GAME_GENRE = "roguelike";
-            GAME_NAME = "roguelike_claude";
+            GAME_NAME = "roguelike_base";
             GAME_LETTER = "B";
 
             // add the loader script
