--- a/game_pages/space_shooter/A.html
+++ b/game_pages/space_shooter/A.html
@@ -3,8 +3,7 @@
     <head>
         <script>
             GAME_GENRE = "space shooter";
-            // GAME_NAME = "space_shooter_claude";
-            GAME_NAME = "survivorlike_base";
+            GAME_NAME = "space_shooter_base";
             GAME_LETTER = "A";
 
             // add the loader script
