--- a/game_pages/roguelike/A.html
+++ b/game_pages/roguelike/A.html
@@ -13,6 +13,7 @@
             s.innerHTML = null;
             document.getElementsByTagName("head")[0].appendChild(s);
         </script>
+        <script src="../../utils.js"></script>
 
 
         <title>RE:Game Design - Game Page Template</title>
@@ -69,7 +70,8 @@
                 <canvas id="unity-canvas" width=576 height=480 style="width: 576px; height: 480px; background: #231F20"></canvas>
             </div>
             <div id="game-instructions">
-                [WASD] Move
+                [WASD] Move | [Space] Skip Turn | [R] Start/Reset Game  <br>
+                [E] Turn Invisible | [Q] Use Smoke Bomb | [Left Click] Throw Shuriken
             </div>
 
             <div id="footer">
@@ -107,50 +109,12 @@
             }
         </script>
 
-
-        <!-- SCRIPTS FOR SHOWING ARROWS -->
-        <script>
-            // set up the arrows to change the game 
-            function setup(){
-                document.getElementById("game-genre").innerHTML = GAME_GENRE.toUpperCase();
-                document.getElementById("game-letter").innerHTML = GAME_LETTER;
-                
-                // Game A
-                if(GAME_LETTER == "A"){
-                    document.getElementById("game-left").innerHTML = "";
-                    document.getElementById("game-right").onclick = function(){
-                        gotoLink("B.html");
-                    }
-                }
-                // Game B
-                else if(GAME_LETTER == "B"){
-                    document.getElementById("game-left").onclick = function(){
-                        gotoLink("A.html");
-                    }
-                    document.getElementById("game-right").onclick = function(){
-                        gotoLink("C.html");
-                    }
-                }
-                // Game C
-                else if(GAME_LETTER == "C"){
-                    document.getElementById("game-right").innerHTML = "";
-                    document.getElementById("game-left").onclick = function(){
-                        gotoLink("B.html");
-                    }
-                }
-            }
-
-        </script>
-
         <script>
             // initialization function
             function INIT(){
                 setup();
                 importUnity();
-            }
-            // goes to the link specified (either in a new window or not)
-            function gotoLink(link,new_window=false){
-                window.open(link,new_window?'_blank':'_self');
+                flashButton(document.getElementById("game-right"));
             }
         </script>
 
