update shooter controls

--- a/game_pages/space_shooter/B.html
+++ b/game_pages/space_shooter/B.html
@@ -70,7 +70,8 @@
                 <canvas id="unity-canvas" width=576 height=480 style="width: 576px; height: 480px; background: #231F20"></canvas>
             </div>
             <div id="game-instructions">
-                [WASD] - Move | [SPACE] - Shoot
+                [WASD] Move | [Left Click] Shoot <br>
+                [Left Shift] Dash | [Q] Heal State | [E] Teleport | [R] Freeze
             </div>
 
             <div id="footer">
