--- a/game_pages/space_shooter/A.html
+++ b/game_pages/space_shooter/A.html
@@ -70,7 +70,7 @@
                 <canvas id="unity-canvas" width=576 height=480 style="width: 576px; height: 480px; background: #231F20"></canvas>
             </div>
             <div id="game-instructions">
-                [WASD] - Move | [SPACE] - Shoot
+                [WASD] Move | [Left Click] Shoot
             </div>
 
             <div id="footer">
