updated roguelike chatgpt and resolutions

--- a/game_pages/roguelike/C.html
+++ b/game_pages/roguelike/C.html
@@ -70,7 +70,7 @@
                 <canvas id="unity-canvas" width=576 height=480 style="width: 576px; height: 480px; background: #231F20"></canvas>
             </div>
             <div id="game-instructions">
-                [WASD] Move | [R] Start/Reset Game | [I] Turn Invisible | [Space] Skip Turn / Restore Energy
+                [WASD] Move | [R] Start/Reset Game <br> [I] Turn Invisible | [Space] Skip Turn / Restore Energy
             </div>
 
             <div id="footer">
