--- a/game_pages/space_shooter/A.html
+++ b/game_pages/space_shooter/A.html
@@ -57,7 +57,7 @@
         <link rel="stylesheet" href="../../styles.css">
     </head>
     <body onload="INIT();">
-        <div id="container">
+        <div style="width:1060px;" id="container">
             <div id="game-genre">
                 
             </div>
@@ -67,7 +67,7 @@
                 <div class='select-items' id="game-right"><img class="select-icon" src='../../imgs/right_arrow_box.png'></div>
             </div>
             <div id="game-container">
-                <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
+                <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; margin:auto; background: #231F20;"></canvas>
             </div>
             <div id="game-instructions">
                 [WASD] Move | [Left Click] Shoot
