--- a/game_pages/space_shooter/B.html
+++ b/game_pages/space_shooter/B.html
@@ -57,7 +57,7 @@
         <link rel="stylesheet" href="../../styles.css">
     </head>
     <body onload="INIT();">
-        <div id="container">
+        <div style="width:1060px;" id="container">
             <div id="game-genre">
                 
             </div>
