--- a/index.html
+++ b/index.html
@@ -2,20 +2,40 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="styles.css">
+    <script src="utils.js"></script>
+
+    <script>
+        TODO_GAME = "roguelike";
+        
+        function showTodo(){
+            // visited before so don't flash the game
+            if(localStorage.getItem('was_visited')){
+                return;
+            
+            // never visited, so flash the game
+            }else{
+                localStorage.setItem('was_visited', 1);
+                var todo_btn = document.getElementById(TODO_GAME + "-btn");
+                flashButton(todo_btn,0.1,0.5);
+            }
+        }
+    </script>
+
+
 </head>
-<body>
+<body onload="showTodo()">
     <div id="container">
         <div id="hub-title">RE:Game Design - Experiment Hub</div>
         <div id="game-row">
-            <div class="game-pick" onclick="gotoLink('game_pages/space_shooter/A.html')">
+            <div class="game-pick" onclick="gotoLink('game_pages/space_shooter/A.html')" id="shooter-btn">
                 <div class="game-title">Space Shooter</div>
                 <div class="game-icon"><img src='imgs/space_shoot.png'></div>
             </div>
-            <div class="game-pick" onclick="gotoLink('game_pages/platformer/A.html')">
+            <div class="game-pick" onclick="gotoLink('game_pages/platformer/A.html')" id="platformer-btn">
                 <div class="game-title">Platformer</div>
                 <div class="game-icon"><img src='imgs/platformer2.png'></div>
             </div>
-            <div class="game-pick" onclick="gotoLink('game_pages/roguelike/A.html')">
+            <div class="game-pick" onclick="gotoLink('game_pages/roguelike/A.html')" id="roguelike-btn">
                 <div class="game-title">Rogue-like</div>
                 <div class="game-icon"><img src='imgs/dungeon.png'></div>
             </div>
