--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="utils.js"></script>
 
     <script>
-        TODO_GAME = "roguelike";
+        TODO_GAME = "space_shooter";
         
         function showTodo(){
             // visited before so don't flash the game
@@ -27,7 +27,7 @@
     <div id="container">
         <div id="hub-title">RE:Game Design - Experiment Hub</div>
         <div id="game-row">
-            <div class="game-pick" onclick="gotoLink('game_pages/space_shooter/A.html')" id="shooter-btn">
+            <div class="game-pick" onclick="gotoLink('game_pages/space_shooter/A.html')" id="space_shooter-btn">
                 <div class="game-title">Space Shooter</div>
                 <div class="game-icon"><img src='imgs/space_shoot.png'></div>
             </div>
