--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
             <div id="about-text">
                 This is a research experiment to test and compare the creative game design capabilities of large language models (LLMS.) We create 3 base game designed around design principles of 3 genres of games: space shooter, platformers, and rogue-like dungeon crawlers. 
                 <br><br>
-                For this experiment we prompt 2 LLMs - ChatGPT and Claude - to suggest and provide code snippets for features to improve these base games. We directly implement these suggested features and then compare the games to see which LLM is better at suggesting features that improve the game. We compare these LLM made games against a user-only improved game.
+                For this experiment we prompt the ChatGPT to suggest and provide code snippets for features to improve these base games. We directly implement these suggested features and then compare the games to see which LLM is better at suggesting features that improve the game. We compare the LLM made games against a user-only improved game and the original base game.
                 <br><br>
-                This is a user study intended to evaluate the cohesiveness, uniqueness, and game feel of the resulting LLM co-designed games against a pure human-made game. The results of this study will be used to inform the design of future LLMs and to help game designers understand the potential and limitations of LLMs in the game design process.
+                This is a user study intended to evaluate the cohesiveness, uniqueness, and game feel of the resulting LLM co-designed games against pure human-made games. The results of this study will be used to inform the design of future LLMs and to help game designers understand the potential and limitations of LLMs in the game design process.
                 <br><br>
             </div>
             <div id="authors">
