update about and styles

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <div id="authors">
                 <div id="author-title">Authors</div>
                 <div id="author-row">
-                    <div class="author-img" onclick="gotoLink('')"><img src='imgs/authors/asadanjum.png'><div class='author-name'>Asad Anjum</div></div>
+                    <div class="author-img" onclick="gotoLink('https://asadanjumportfolio.wordpress.com/')"><img src='imgs/authors/asadanjum.png'><div class='author-name'>Asad Anjum</div></div>
                     <div class="author-img" onclick="gotoLink('')"><img src='imgs/authors/justinli.png'><div class='author-name'>Justin Li</div></div>
                     <div class="author-img" onclick="gotoLink('https://mastermilkx.github.io/',true)"><img src='imgs/authors/mcharity.png'><div class='author-name'>M Charity</div></div>
                     <div class="author-img" onclick="gotoLink('http://julian.togelius.com/',true)"><img src='imgs/authors/juliantogelius.jpeg'><div class='author-name'>Julian Togelius</div></div>
