--- a/game_pages/platformer/A.html
+++ b/game_pages/platformer/A.html
@@ -69,7 +69,7 @@
                 <canvas id="unity-canvas" width=576 height=480 style="width: 576px; height: 480px; background: #231F20"></canvas>
             </div>
             <div id="game-instructions">
-                [A] Move Left | [W] Jump | [D] Move Right <br>
+                [A] Move Left | [D] Move Right | [Space] Jump <br>
                 [S] Toggle Size | [G] Gravity Flip
             </div>
 
