--- a/game_pages/space_shooter/A.html
+++ b/game_pages/space_shooter/A.html
@@ -70,7 +70,7 @@
                 <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; margin:auto; background: #231F20;"></canvas>
             </div>
             <div id="game-instructions">
-                [WASD] Move | [Left Click] Shoot
+                [WASD] Move | [Left Click] Shoot | [Left Shift] Dash
             </div>
 
             <div id="footer">
