--- a/game_pages/space_shooter/C.html
+++ b/game_pages/space_shooter/C.html
@@ -70,7 +70,7 @@
                 <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
             </div>
             <div id="game-instructions">
-                [WASD] Move | [Left Click] Shoot <br>
+                [WASD] Move | [Left Click] Shoot | [Left Shift] Dash <br>
                 [Q] Freeze | [E] Bomb | [R] Force Back
             </div>
 
