--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="utils.js"></script>
 
     <script>
-        TODO_GAME = "platformer";
+        TODO_GAME = "roguelike";
         
         function showTodo(){
             // visited before so don't flash the game
