--- a/game_pages/roguelike/C.html
+++ b/game_pages/roguelike/C.html
@@ -74,7 +74,7 @@
             </div>
 
             <div id="footer">
-                <div class="foot-item" onclick="gotoLink('https://forms.gle/G9vE4AJTqWKUzMwj8',true)" id="game-form">FORM</div>
+                <!-- <div class="foot-item" onclick="gotoLink('https://forms.gle/G9vE4AJTqWKUzMwj8',true)" id="game-form">FORM</div> -->
                 <div class="foot-item" onclick="gotoLink('../../index.html')">HOME</div>
             </div>
         </div>
