update for public

--- a/about.html
+++ b/about.html
@@ -76,7 +76,8 @@
                 </div>
             </div>
             <div id="footer">
-                <div class="foot-item" onclick="download('ink_splotch_2_column.pdf')">PAPER</div>
+                <!-- <div class="foot-item" onclick="download('ink_splotch_2_column.pdf')">PAPER</div> -->
+                <div class="foot-item" onclick="gotoLink('https://arxiv.org/abs/2403.02454', true)">PAPER</div>
                 <div class="foot-item" onclick="gotoLink('index.html')">HOME</div>
             </div>
         </div>
