--- a/game_pages/space_shooter/C.html
+++ b/game_pages/space_shooter/C.html
@@ -63,7 +63,7 @@
             </div>
             <div id="game-select">
                 <div class='select-items' id="game-left"><img class="select-icon" src='../../imgs/left_arrow_box.png'></div>
-                <div class='select-items' id="game-letter">?</div>
+                <div class='select-items' id="game-letter">Human</div>
                 <div class='select-items' id="game-right"><img class="select-icon" src='../../imgs/right_arrow_box.png'></div>
             </div>
             <div id="game-container">
@@ -115,7 +115,7 @@
             function INIT(){
                 setup();
                 importUnity();
-                flashButton(document.getElementById("game-form"));
+                // flashButton(document.getElementById("game-form"));
             }
         </script>
 
