--- a/game_pages/platformer/A.html
+++ b/game_pages/platformer/A.html
@@ -34,7 +34,7 @@
             }
             #game-letter{
                 width:100px;
-                font-size:48px;
+                font-size:24px;
                 line-height: 50px;
                 text-align:center;
                 font-weight:bold;
@@ -62,7 +62,7 @@
             </div>
             <div id="game-select">
                 <div class='select-items' id="game-left"><img class="select-icon" src='../../imgs/left_arrow_box.png'></div>
-                <div class='select-items' id="game-letter">?</div>
+                <div class='select-items' id="game-letter">ChatGPT</div>
                 <div class='select-items' id="game-right"><img class="select-icon" src='../../imgs/right_arrow_box.png'></div>
             </div>
             <div id="game-container">
@@ -113,7 +113,7 @@
             function INIT(){
                 setup();
                 importUnity();
-                flashButton(document.getElementById("game-right"));
+                // flashButton(document.getElementById("game-right"));
             }
         </script>
 
