--- a/game_pages/space_shooter/B.html
+++ b/game_pages/space_shooter/B.html
@@ -63,7 +63,7 @@
             </div>
             <div id="game-select">
                 <div class='select-items' id="game-left"><img class="select-icon" src='../../imgs/left_arrow_box.png'></div>
-                <div class='select-items' id="game-letter">?</div>
+                <div class='select-items' id="game-letter">ChatGPT</div>
                 <div class='select-items' id="game-right"><img class="select-icon" src='../../imgs/right_arrow_box.png'></div>
             </div>
             <div id="game-container">
@@ -114,7 +114,7 @@
             function INIT(){
                 setup();
                 importUnity();
-                flashButton(document.getElementById("game-right"));
+                // flashButton(document.getElementById("game-right"));
             }
         </script>
 
